# jsonlt

./: .gitignore  .pre-commit-config.yaml  .vale.ini  CITATION.cff  Justfile  LICENSE  README.md  _redirects  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  wrangler.jsonc
.github/workflows/: ci.yml
.vale/JSONLTSpec/: RFC2119-passive.yml  RFC2119-uppercase.yml  Testability-unmeasurable.yml  Testability-vague.yml
.vale/config/vocabularies/JSONLTSpec/: accept.txt
conformance/: README.md  copyright.include  index.bs
conformance/schemas/v1/: report.schema.json  suite.schema.json
conformance/suite/: compaction.jsonc  format.jsonc  generator.jsonc  header.jsonc  keys.jsonc  ops.jsonc  recovery.jsonc  state.jsonc  transactions.jsonc
design/: README.md  comparison-with-alternatives.md  database-classification.md  design-rationale.md  future-directions.md  implementation-guidance.md  limitations-and-anti-patterns.md  use-case-patterns.md
scripts/: strip_jsonc_comments.py
spec/: copyright.include  index.bs
spec/sections/: a11y.include  acknowledgments.include  algorithms.include  api.include  concurrency.include  conformance.include  constructs.include  exceptions.include  extensions.include  i18n.include  implementation-mapping.include  introduction.include  physical-format.include  privacy.include  profile-requirements.include  security.include  size-complexity.include  table-operations.include  terminology.include
